# BikeIotProject

./: CMakeLists.txt  README.md  bike_app_config.h  bike_app_main.c  mylib.c  mylib.h
app/inc/: GPS_control.h  app_adc_calac.h  app_audio.h  app_config.h  app_error.h  app_led_ind.h  app_main.h  app_rtc_task.h  app_sensor.h  app_system.h  app_virt_uart.h  ble_control.h  ble_protocol.h  can_protocol.h  car_control.h  config.h  http_upgrade_ota.h  imualgo_axis9.h  lock.h  low_power.h  mcu_uart.h  net_control.h  net_eg_protocol.h  net_engwe_protocol.h  net_protocol.h  qmi8658.h  sys_core.h
app/src/: GPS_control.c  app_adc_calac.c  app_audio.c  app_error.c  app_led_ind.c  app_main.c  app_rtc_task.c  app_sensor.c  app_system.c  app_virt_uart.c  ble_control.c  ble_protocol.c  can_protocol.c  car_control.c  http_upgrade_ota.c  lock.c  low_power.c  mcu_uart.c  net_control.c  net_engwe_protocol.c  net_protocol.c  qmi8658.c  sys_core.c
common/inc/: app_common.h  common.h  ringbuffer.h  rtos_port_def.h
common/src/: app_common.c  common.c  ringbuffer.c
hal_drv/inc/: hal_drv_flash.h  hal_drv_gpio.h  hal_drv_iic.h  hal_drv_net.h  hal_drv_rtc.h  hal_drv_uart.h  hal_resources_config.h  hal_virt_at.h
hal_drv/src/: hal_drv_flash.c  hal_drv_gpio.c  hal_drv_iic.c  hal_drv_net.c  hal_drv_rtc.c  hal_drv_uart.c  hal_virt_at.c
port/: log_port.h  rtos_port_def.h
